<resources>
    <string name="app_name">Fluent 2 XML Demo</string>
    <string name="button_section_name">Buttons</string>
    <string name="button_name_large">Large</string>
    <string name="button_name_medium">Medium</string>
    <string name="button_name_small">Small</string>
    <string name="enter_and_exit">Enter and Exit</string>
    <string name="prototype">Prototype</string>
    <string name="exit">Exit</string>
    <string name="in">In</string>
    <string name="enter">Enter</string>
    <string name="hint_search_text">Search your photos</string>
    <string name="snackbar_variants">See snackbar variants</string>
    <string name="long_content_summary">We\’ve updated OneDrive\’s privacy settings to let you know what data we collect and how we use it. When you entrust your data to Office, you remain the sole owner of that data. We collect required diagnostic data to keep your apps secure, up-to-date, and performing as expected on the device it\’s installed on. OneDrive connects to online services to power your experience, and as part of that, we gather required services data. Other Microsoft apps also connect to online services, which may analyze your content to deliver suggestions and recommendations.</string>
    <string name="banner_example_title">Transform ordinary moments</string>
    <string name="banner_example_title_long">Transform ordinary moments into extraordinary moments into moments and moments</string>
    <string name="banner_example_message">Transform ordinary moments into extraordinary moments.</string>
    <string name="banner_example_primary_button">Learn More</string>
    <string name="banner_example_dismiss_button">Dismiss</string>
    <string name="banner_example_action">Example action taken</string>
    <string name="add_button_content_description">Add new</string>
    <string name="enable_guidelines">Enable Guidelines</string>
    <string name="tab_selector_content_description">%1$s; %2$s; %3$s</string>
</resources>