<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="?colorNeutralBackground1">

    <FrameLayout
        android:id="@+id/fab_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:layout_gravity="center"
        android:background="?colorNeutralBackground1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fab_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clipChildren="false"
            android:translationZ="1dp">

            <TextView
                android:id="@+id/fab_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search Fab"
                android:textColor="?attr/colorNeutralForeground3"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enter_exit"
                style="@style/Widget.Fluent2.Button.Accent.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="true"
                android:focusable="true"
                android:text="@string/enter_and_exit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fab_text"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enable_guidelines"
                style="@style/Widget.Fluent2.Button.Accent.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="12dp"
                android:enabled="true"
                android:focusable="true"
                android:text="@string/enable_guidelines"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_exit"/>

            <com.microsoft.fluentxml.components.MotionViewSearchFab
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:layoutDirection="locale"
                android:focusable="false"
                android:importantForAccessibility="no"
                android:layout_marginTop="50dp"
                app:addButtonContentDescription="@string/add_button_content_description"
                app:hintSearchText="@string/hint_search_text"
                app:layout_constraintTop_toBottomOf="@+id/enable_guidelines"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/starter_measure"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_gravity="start"
            android:visibility="gone"
            android:background="?colorBrandForeground1"
            android:translationZ="4dp" />

        <View
            android:id="@+id/center_guide"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="?colorBrandForeground1"
            android:visibility="gone"
            android:translationZ="1dp" />

        <View
            android:id="@+id/start_guide"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:translationZ="1dp"
            android:visibility="gone"
            android:background="?colorBrandForeground1" />

        <View
            android:id="@+id/end_guide"
            android:layout_width="1dp"
            android:translationZ="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:visibility="gone"
            android:background="?colorBrandForeground1" />

        <View
            android:id="@+id/end_measure"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_gravity="end"
            android:background="?colorBrandForeground1"
            android:visibility="gone"
            android:translationZ="1dp" />
    </FrameLayout>
</ScrollView>