<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:id="@+id/button_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="7">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Accent.Large"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_heart_24"
            android:focusable="true"
            android:text="@string/button_name_large" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Accent.Medium"
            android:layout_margin="10dp"
            android:focusable="true"
            android:text="@string/button_name_medium" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Accent.Small"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_heart_24"
            android:focusable="true"
            android:text="@string/button_name_small" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Accent.Large"
            android:layout_margin="10dp"
            android:enabled="false"
            android:text="@string/button_name_large" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Accent.Medium"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_heart_24"
            android:enabled="false"
            android:focusable="true"
            android:text="@string/button_name_medium" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Accent.Small"
            android:layout_margin="10dp"
            android:enabled="false"
            android:focusable="true"
            android:text="@string/button_name_small" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.OutlineAccent.Large"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_heart_24_outline_accent"
            android:focusable="true"
            android:text="@string/button_name_large" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.OutlineAccent.Medium"
            android:layout_margin="10dp"
            android:focusable="true"
            android:text="@string/button_name_medium" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.OutlineAccent.Small"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_heart_24_outline_accent"
            android:focusable="true"
            android:text="@string/button_name_small" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.OutlineAccent.Large"
            android:layout_margin="10dp"
            android:enabled="false"
            android:text="@string/button_name_large" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.OutlineAccent.Medium"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_heart_24_outline_accent"
            android:enabled="false"
            android:focusable="true"
            android:text="@string/button_name_medium" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.OutlineAccent.Small"
            android:layout_margin="10dp"
            android:enabled="false"
            android:focusable="true"
            android:text="@string/button_name_small" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Outline.Large"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_heart_24_outline"
            android:focusable="true"
            android:text="@string/button_name_large" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Outline.Medium"
            android:layout_margin="10dp"
            android:focusable="true"
            android:text="@string/button_name_medium" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Outline.Small"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_heart_24_outline"
            android:focusable="true"
            android:text="@string/button_name_small" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Subtle.Large"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_heart_24_outline_accent"
            android:focusable="true"
            android:text="@string/button_name_large" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Subtle.Medium"
            android:layout_margin="10dp"
            android:focusable="true"
            android:text="@string/button_name_medium" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Subtle.Small"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_heart_24_outline_accent"
            android:enabled="false"
            android:focusable="true"
            android:text="@string/button_name_small" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Subtle.Large.Danger"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:text="@string/button_name_large" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Subtle.Medium.Danger"
            android:layout_margin="10dp"
            android:focusable="true"
            android:text="@string/button_name_medium" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Fluent2.Button.Subtle.Small.Danger"
            android:layout_margin="10dp"
            android:focusable="true"
            android:text="@string/button_name_small" />

    </GridLayout>
</LinearLayout>